--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
 RewriteCond $1 !^(index\.php|images|asset|robots\.txt)
-RewriteRule ^(.*)$ /index.php/$1 [L]
+RewriteRule ^(.*)$ /matchpoint/index.php/$1 [L]
